--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
       <dependency>
         <groupId>com.floragunn</groupId>
         <artifactId>codova</artifactId>
-        <version>1.8.0</version>
+        <version>b-bump-jakarta-mail-version-SNAPSHOT</version>
       </dependency>
 
       <dependency>
@@ -424,7 +424,7 @@
 			     creeping into the build by transitive dependencies -->
       <groupId>jakarta.activation</groupId>
       <artifactId>jakarta.activation-api</artifactId>
-      <version>[1.2.2,1.3)</version>
+      <version>[2.0.1,2.1.2)</version>
       <scope>provided</scope>
     </dependency>
 
