--- a/security-legacy/src/test/resources/log4j2-test.properties
+++ b/security-legacy/src/test/resources/log4j2-test.properties
@@ -27,13 +27,13 @@ logger.sg.level = warn
 #logger.resolver.level = trace
 
 logger.pe.name = com.floragunn.searchguard.authz
-logger.pe.level = trace
+logger.pe.level = info
 
 logger.au.name = com.floragunn.searchguard.auth
-logger.au.level = trace
+logger.au.level = info
 
 logger.session.name = com.floragunn.searchguard.session
-logger.session.level = trace
+logger.session.level = info
 
 logger.cas.name = org.elasticsearch.cluster.service.ClusterApplierService
 logger.cas.level = error
