--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -23,6 +23,11 @@
   <dependencies>
 
     <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
